--- a/amundsen_application/static/js/components/NavBar/styles.scss
+++ b/amundsen_application/static/js/components/NavBar/styles.scss
@@ -8,7 +8,8 @@ $avatar-container-size: 40px;
 
 .nav-bar {
   align-items: center;
-  background: $nav-bar-color;
+  /*background: $inbot-black */
+  background: #e5e5e5;
   display: flex;
   flex-direction: row;
   height: $nav-bar-height;
@@ -73,6 +74,7 @@ $avatar-container-size: 40px;
     a {
       text-decoration: none;
       display: inline-block;
+      color:#030030;
     }
   }
 
