--- a/amundsen_application/static/js/pages/SearchPage/SearchPanel/styles.scss
+++ b/amundsen_application/static/js/pages/SearchPage/SearchPanel/styles.scss
@@ -9,6 +9,7 @@
   flex: 0 0 $search-panel-width;
   flex-direction: column;
   overflow-y: auto;
+  /* background: rgb(3,0,48,0.05); */
 
   .section {
     padding: 32px 24px 32px 32px;
