--- a/amundsen_application/static/css/_typography-default.scss
+++ b/amundsen_application/static/css/_typography-default.scss
@@ -272,6 +272,7 @@ body {
   font-family: $font-family-body;
   font-size: 14px;
   font-weight: $font-weight-body-regular;
+  background: #f6f3f9;
 }
 
 .title-2,
