--- a/amundsen_application/static/js/components/NavBar/styles.scss
+++ b/amundsen_application/static/js/components/NavBar/styles.scss
@@ -9,7 +9,7 @@ $avatar-container-size: 40px;
 .nav-bar {
   align-items: center;
   /*background: $inbot-black */
-  background: #e5e5e5;
+  background: #f6f3f9;
   display: flex;
   flex-direction: row;
   height: $nav-bar-height;
@@ -88,7 +88,7 @@ $avatar-container-size: 40px;
 
     .search-bar {
       max-width: 560px;
-      margin: auto 0 auto auto;
+      margin-left: 40px;
     }
   }
 
