--- a/amundsen_application/static/css/_variables-default.scss
+++ b/amundsen_application/static/css/_variables-default.scss
@@ -39,12 +39,12 @@ $column-name-color: $indigo70;
 $link-color: $brand-color-4;
 $link-hover-color: $brand-color-5;
 
-$font-family-body: 'Open Sans', sans-serif !default;
+$font-family-body: 'Inter', sans-serif !default;
 $font-weight-body-regular: 400 !default;
 $font-weight-body-semi-bold: 600 !default;
 $font-weight-body-bold: 700 !default;
 
-$font-family-header: 'Roboto', sans-serif !default;
+$font-family-header: 'Inter', sans-serif !default;
 $font-weight-header-regular: 500 !default;
 $font-weight-header-bold: 700 !default;
 
