--- a/amundsen_application/static/js/pages/SearchPage/SearchPanel/styles.scss
+++ b/amundsen_application/static/js/pages/SearchPage/SearchPanel/styles.scss
@@ -11,13 +11,22 @@
   overflow-y: auto;
   background: #e9e7ee;
 
+  a {
+    text-decoration: none;
+    margin-left: 32px;
+  }
+
+  a h3 {
+    color: rgba(3,0,48,0.4);
+  }
+
   .section {
     padding: 32px 24px 32px 32px;
     width: $search-panel-width; /* $search-panel-widt - $search-panel-border-width */
 
-    &:not(:first-child) {
+/*     &:not(:first-child) {
       border-top: 2px solid $stroke;
-    }
+    } */
   }
 
   .checkbox,
