added Inter font files and fixed font styles, navbar height and element positions fixed, fixed influencer hover effect, changed logo sizes, fixed styles in profilepage elements, changed influence score code and added comments

--- a/amundsen_application/static/css/_fonts-default.scss
+++ b/amundsen_application/static/css/_fonts-default.scss
@@ -47,3 +47,24 @@
   font-weight: $font-weight-body-bold;
   src: url('../fonts/OpenSans-Bold.ttf') format('truetype');
 }
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: $font-weight-body-regular;
+  src: url('../fonts/Inter-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: $font-weight-body-semi-bold;
+  src: url('../fonts/Inter-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: $font-weight-body-bold;
+  src: url('../fonts/Inter-Bold.ttf') format('truetype');
+}
