--- a/amundsen_application/static/js/pages/TestProfilePage/Boxstyle.scss
+++ b/amundsen_application/static/js/pages/TestProfilePage/Boxstyle.scss
@@ -58,7 +58,7 @@ flex-direction: column;
 }
 
 .profile_header_row h1{
-  margin-right: 30px;
+  margin-right: 14px;
 }
 
 .progressbarbox {
@@ -98,13 +98,13 @@ flex-direction: column;
   display: flex;
   width: 320px;
   flex-direction: column;
-  margin-top: 15px;
+  margin: 20px;
+  margin-left: 0px;
   color: #030030;
-  padding: 10px;
-  padding-left:20px;
+  padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px rgba(189, 110, 202, 0.2);
-  transition: box-shadow 0.5s;
+  transition: margin 0.5s, box-shadow 0.5s;
 
   a h3 {
     margin-left:0px;
@@ -119,6 +119,8 @@ flex-direction: column;
 
 .box_influencer:hover {
   text-decoration: none;
+  margin-top: 14px;
+  margin-bottom: 26px;
   box-shadow: 0px 8px 8px 0px rgba(189, 110, 202, 0.6);
   } 
 
