added frontpage image, headline

--- a/amundsen_application/static/js/pages/HomePage/styles.scss
+++ b/amundsen_application/static/js/pages/HomePage/styles.scss
@@ -26,3 +26,14 @@
     }
   }
 }
+.frontpage-header {
+  text-align: center;
+}
+
+.inbot-brain {
+  color:#e73158;
+}
+.frontpage-img {
+    margin-right: 30px;
+    float: right;
+}
