--- a/amundsen_application/static/js/components/NavBar/styles.scss
+++ b/amundsen_application/static/js/components/NavBar/styles.scss
@@ -106,7 +106,9 @@ $avatar-container-size: 50px;
 
   .profile-menu {
     $profile-menu-width: 200px;
-
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(189, 110, 202, 0.2);
+    border-radius: 10px;
     width: $profile-menu-width;
 
     .profile-menu-header {
@@ -116,9 +118,15 @@ $avatar-container-size: 50px;
     li {
       a {
         color: $text-primary;
-        padding: $spacer-2;
+        padding: 0px;
+        padding-left: 20px;
         width: 100%;
+        font-size: 18px;
+        font-weight: bold;
       }
+    }
+    img {
+      margin-right: 16px;
     }
   }
 
