--- a/amundsen_application/static/js/pages/PersonPage/Boxstyle.scss
+++ b/amundsen_application/static/js/pages/PersonPage/Boxstyle.scss
@@ -133,6 +133,10 @@ flex-direction: column;
   margin-bottom: 30px;
 }
 
+.not-available {
+  margin-left:20px
+}
+
 @media (max-width: 768px)
 {
   .page_j {
