changed home page styling

--- a/amundsen_application/static/js/pages/HomePage/styles.scss
+++ b/amundsen_application/static/js/pages/HomePage/styles.scss
@@ -3,6 +3,22 @@
 
 @import 'variables';
 
+.page_column_front {
+  display: flex;
+  justify-content: left;
+  flex-direction: column;
+  width: 100%;
+}
+.page_row_front {
+  display: flex;
+  justify-content: left;
+  flex-direction: row;
+  width: 100%;
+}
+.searchPanel_front {
+  display: flex;
+}
+
 .home-page {
   .home-element-container {
     margin-top: $spacer-4 * 2;
@@ -28,6 +44,7 @@
 }
 .frontpage-header {
   text-align: center;
+  margin: 30px;
 }
 
 .inbot-brain {
