--- a/amundsen_application/static/js/components/NavBar/styles.scss
+++ b/amundsen_application/static/js/components/NavBar/styles.scss
@@ -115,6 +115,13 @@ $avatar-container-size: 50px;
       padding: $spacer-2 $spacer-2 0;
     }
 
+    .arrow-up {
+      width: 0; 
+      height: 0; 
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-bottom: 5px solid black;
+    }
     li {
       a {
         color: $text-primary;
