added condition left-icon-bar component to NavBar, removed side panel from home page, removed files for LoginPage and NavBarLogin, disabled Footer because not used for now

--- a/amundsen_application/static/js/components/NavBar/styles.scss
+++ b/amundsen_application/static/js/components/NavBar/styles.scss
@@ -14,6 +14,14 @@ $avatar-container-size: 50px;
   flex-direction: row;
   height: $nav-bar-height;
 
+  .nav-bar-home-left {
+    background: #f6f3f9;
+    flex-basis: 240px;
+    padding: 30px;
+    padding-left: 32px;
+    padding-right: 95px;
+  }
+  
   .nav-bar-left {
     flex-basis: 240px;
 
@@ -143,3 +151,4 @@ $avatar-container-size: 50px;
     border-radius: $shimmer-loader-circle-size;
   }
 }
+
