--- a/amundsen_application/static/js/pages/SearchPage/SearchPanel/styles.scss
+++ b/amundsen_application/static/js/pages/SearchPage/SearchPanel/styles.scss
@@ -10,6 +10,7 @@
   flex-direction: column;
   overflow-y: auto;
   background: #e9e7ee;
+  padding-top: 40px;
 
   a {
     text-decoration: none;
@@ -20,7 +21,7 @@
   }
 
   .section {
-    padding: 32px 24px 32px 32px;
+    padding: 0px 32px 12px 32px;
     width: $search-panel-width; /* $search-panel-widt - $search-panel-border-width */
 
 /*     &:not(:first-child) {
