fixed styling issue

--- a/amundsen_application/static/css/_login.scss
+++ b/amundsen_application/static/css/_login.scss
@@ -8,7 +8,7 @@
     transform: translate(-50%, -50%);
     width: 80%;
 }
-.frontpage-header {
+.login-header {
     text-align: center;
     margin: 30px;
   }
@@ -17,20 +17,20 @@
 color:#e73158;
 
 }
-.frontpage-img {
+.login-img {
     margin-right: 30px;
     float: right;
     position: absolute;
     top: 75%;
     left: 50%;
 }
-.inbot-logo {
+.inbot-logo-login {
     height: 80px;
     padding-left: 32px;
     padding-top: 20px;
 }
 
-.button-container-div a {
+.login-button-container-div a {
     position: absolute;
     left: 40%;
 }
