--- a/amundsen_application/static/js/pages/CompanyPage/Boxstyle.scss
+++ b/amundsen_application/static/js/pages/CompanyPage/Boxstyle.scss
@@ -117,6 +117,10 @@ flex-direction: column;
   }
 }
 
+.box_people {
+  width: 600px
+}
+
 .box_influencer:hover {
   text-decoration: none;
   margin-top: 14px;
@@ -133,6 +137,13 @@ flex-direction: column;
   margin-bottom: 30px;
 }
 
+.people_header {
+  display: flex;
+  justify-content: space-between;
+}
+.icon-box {
+  justify-content: flex-end;
+}
 .not-available {
   margin-left:20px
 }
