--- a/amundsen_application/static/js/pages/CompanyPage/Boxstyle.scss
+++ b/amundsen_application/static/js/pages/CompanyPage/Boxstyle.scss
@@ -55,6 +55,7 @@ flex-direction: column;
   flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
+  margin-left: 20px;
 }
 
 .person_header_row h1{
@@ -98,9 +99,8 @@ flex-direction: column;
   display: flex;
   width: 320px;
   flex-direction: column;
-  margin: 20px;
+  margin: 10px;
   margin-left: 0px;
-  color: #030030;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px rgba(189, 110, 202, 0.2);
@@ -118,7 +118,12 @@ flex-direction: column;
 }
 
 .box_people {
-  width: 600px
+  width: 600px;
+
+  .title-text {
+    margin-top:5px;
+    margin-bottom:5px;
+  }
 }
 
 .box_influencer:hover {
@@ -146,6 +151,31 @@ flex-direction: column;
 }
 .not-available {
   margin-left:20px
+}
+
+.tag-box {
+  display: flex;
+  align-items: center;
+  height: 30px;
+  position:relative;
+  left: -10px;
+
+
+  .tag{
+    display: flex;
+    background: rgba(227, 0, 48, 0.2);
+    border-radius: 10px;
+    align-items: center;
+    height: 30px;
+    margin-right: 10px;
+
+    .tag-text {
+      margin-top:5px;
+      margin-bottom:5px;
+      margin-left: 10px;
+      margin-right: 10px
+    }
+  }
 }
 
 @media (max-width: 768px)
