--- a/amundsen_application/static/css/_variables-custom.scss
+++ b/amundsen_application/static/css/_variables-custom.scss
@@ -2,3 +2,5 @@
 // SPDX-License-Identifier: Apache-2.0
 
 // This file is intentionally left blank and should be used to add new custom variables or overwrite defaults from _variables-default.scss
+
+$footer-height: 0px;
