--- a/amundsen_application/static/js/components/NavBar/styles.scss
+++ b/amundsen_application/static/js/components/NavBar/styles.scss
@@ -48,6 +48,12 @@ $avatar-container-size: 50px;
       } */
     }
 
+    .nav-bar-text {
+      font-weight: bold;
+      line-height: 54px;
+      cursor: default
+    }
+
     .nav-bar-avatar {
       background-color: $nav-bar-color;
       border-radius: 50%;
