--- a/amundsen_application/static/css/_variables-default.scss
+++ b/amundsen_application/static/css/_variables-default.scss
@@ -128,7 +128,7 @@ $tag-bg-hover: $gray10;
 $tag-border-radius: 4px;
 
 // TODO Temp Colors
-$resource-title-color: $indigo60;
+$resource-title-color: rgba(3, 0, 48, 0.8);
 
 // Spacing
 $spacer-size: 8px;
