--- a/amundsen_application/static/css/_variables-default.scss
+++ b/amundsen_application/static/css/_variables-default.scss
@@ -100,7 +100,7 @@ $red-triangle-warning: $sunset60;
 // Header, Body, & Footer
 $nav-bar-color: $inbot-black;
 $nav-bar-height: 80px;
-$body-min-width: 1048px;
+$body-min-width: 100%; /* 1048px; */
 $footer-height: 60px;
 $navbar-item-line-height: 54px;
 
