--- a/amundsen_application/static/templates/login.html
+++ b/amundsen_application/static/templates/login.html
@@ -32,10 +32,25 @@
         alt="Inbot">
       </img>
     </div>
+    
+    <div class="img-div-front-mobile">
+      <img 
+        class="login-img" 
+        src="{{ url_for('static', filename='images/frontpage-rafiki.svg') }}" 
+        alt="mental-healts-brain">
+      </img>
+    </div>
+
     <div class="login-container-div">
         <h1 class="login-header">Welcome to <span class="inbot-brain">Inbot Brain</span>,<br> an intelligent graph for data-centric organizations.</h1>
         
-        <div>
+        <div class="login-button-container-div">
+          <a href="/mslogin">
+              <img src="{{ url_for('static', filename='images/ms-login-white.svg') }}" alt="Sign in with Microsoft"></img>
+          </a>
+        </div>
+
+        <div class="img-div-front-fullscreen">
           <img 
             class="login-img" 
             src="{{ url_for('static', filename='images/frontpage-rafiki.svg') }}"
@@ -43,11 +58,6 @@
           </img>
         </div>
 
-        <div class="login-button-container-div">
-            <a href="/mslogin">
-                <img src="{{ url_for('static', filename='images/ms-login-white.svg') }}" alt="Sign in with Microsoft"></img>
-            </a>
-        </div>
         
     </div>
     <%= htmlWebpackPlugin.tags.bodyTags %>
