loginpage and homepage responsive, changes to navbar to hide avatar when responsive, fixed default variable body-min-width to 100%

--- a/amundsen_application/static/js/components/NavBar/styles.scss
+++ b/amundsen_application/static/js/components/NavBar/styles.scss
@@ -150,5 +150,12 @@ $avatar-container-size: 50px;
     width: $shimmer-loader-circle-size;
     border-radius: $shimmer-loader-circle-size;
   }
+
+  @media (max-width: $screen-sm-max) {
+    .nav-bar-right {
+      display: none;
+    }
+  }
 }
+
 
