--- a/amundsen_application/static/js/pages/PersonPage/ProgressBar.scss
+++ b/amundsen_application/static/js/pages/PersonPage/ProgressBar.scss
@@ -1,4 +1,4 @@
-.progress-div_low {
+.progress-div-low {
     background-color: rgb(233, 233, 233);
     border-radius: .5rem;
     margin-left: 20px;
@@ -6,7 +6,8 @@
     height: 10px;
     border: 1px solid rgba(184, 184, 184, 0.8)
 }
-.progress-div_high {
+
+.progress-div-high {
     background-color: rgb(233, 233, 233);
     border-radius: .5rem;
     margin-left: 20px;
@@ -14,14 +15,14 @@
     height: 10px;
     border: 1px solid rgba(189,110,202,0.8)
 }
-    
-.progress_low {
+
+.progress-low {
     background-color: rgba(184,184,184,0.8);
     height: 10px;
     border-radius: 1rem;
 }
 
-.progress_high {
+.progress-high {
     background-color: rgba(189,110,202,0.8);
     height: 10px;
     border-radius: 1rem;
