searchpage responsive, changed search result boxes styling

--- a/amundsen_application/static/js/components/NavBar/styles.scss
+++ b/amundsen_application/static/js/components/NavBar/styles.scss
@@ -101,7 +101,7 @@ $avatar-container-size: 50px;
     margin: auto $spacer-2 auto auto;
 
     .search-bar {
-      max-width: 560px;
+      max-width: 75%;
       margin-left: 20px;
     }
   }
