--- a/amundsen_application/static/css/_list-group.scss
+++ b/amundsen_application/static/css/_list-group.scss
@@ -7,14 +7,24 @@
   margin: 24px 0;
 
   .list-group-item {
-    border-left: none;
-    border-right: none;
-    padding: 0;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    margin-left: 20px;
+    color: #030030;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px 0px rgba(189, 110, 202, 0.2);
+    transition: margin 0.5s, box-shadow 0.5s;
 
     &.clickable:hover {
-      box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.12), 0 2px 3px 0 rgba(0, 0, 0, 0.16);
       cursor: pointer;
       z-index: 1;
+      text-decoration: none;
+      margin-top: 14px;
+      margin-bottom: 26px;
+      box-shadow: 0px 8px 8px 0px rgba(189, 110, 202, 0.6);
     }
   }
 }
