--- a/amundsen_application/static/css/_list-group.scss
+++ b/amundsen_application/static/css/_list-group.scss
@@ -10,20 +10,21 @@
     background: white;
     display: flex;
     flex-direction: column;
-    margin: 10px;
+    margin-top: 16px;
     margin-left: 20px;
     color: #030030;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 4px 4px 0px rgba(189, 110, 202, 0.2);
     transition: margin 0.5s, box-shadow 0.5s;
+    border:none;
 
     &.clickable:hover {
       cursor: pointer;
       z-index: 1;
       text-decoration: none;
-      margin-top: 14px;
-      margin-bottom: 26px;
+      margin-top: 12px;
+      margin-bottom: 4px;
       box-shadow: 0px 8px 8px 0px rgba(189, 110, 202, 0.6);
     }
   }
