--- a/amundsen_application/static/css/_pagination.scss
+++ b/amundsen_application/static/css/_pagination.scss
@@ -3,21 +3,38 @@
 
 @import 'variables';
 
+.pagination-box{
+  border-radius: 10px;
+  box-shadow: 0px 4px 4px 0px rgba(189, 110, 202, 0.2);
+  margin-left: auto;
+  margin-right: auto;
+  max-width: fit-content;
+  background-color: white;
+}
+
 .pagination {
   display: flex;
   justify-content: center;
+  margin: 20px;
 
   li {
     > a,
     > span {
-      border: 1px solid $stroke;
-      color: $brand-color-4;
+      background-color: white;
+      border-color: white;
+      color: rgba(3,0,48,0.8);      /* $brand-color-4; */
 
       &:focus,
       &:hover {
-        background-color: $body-bg-tertiary;
-        color: $link-hover-color;
+        background-color: white;
+        border:white;
         z-index: 0;
+      }
+    }
+    &.disabled {
+      > a {
+      background-color: white;
+      border-color: white;
       }
     }
 
@@ -28,9 +45,11 @@
         &:active,
         &:hover,
         &:focus {
-          background-color: $brand-color-4;
-          border-color: $brand-color-4;
-          color: $white;
+          background-color: white;
+          border-color: white;
+          font-weight: bold;
+          text-decoration: underline;
+          color: rgba(3,0,48,0.8);
           z-index: 0;
         }
       }
