--- a/amundsen_application/static/js/components/common/SearchBar/styles.scss
+++ b/amundsen_application/static/js/components/common/SearchBar/styles.scss
@@ -32,7 +32,7 @@
     }
 
     .search-bar-input {
-      border-color: $stroke;
+      border-color: rgba(255, 255, 255, 0);/* $stroke; */
       border-radius: 10px;
       box-shadow: 0 4px 4px 0 rgba(189, 110, 202, 0.2);
       width: 100%;
@@ -49,7 +49,7 @@
       }
 
       &:focus {
-        border-color: $stroke-focus;
+        border-color: rgba(255, 255, 255, 0);/* $stroke-focus; */
       }
 
       &:focus + .search-button .icon-search:not(:hover) {
