--- a/amundsen_application/static/css/_variables-default.scss
+++ b/amundsen_application/static/css/_variables-default.scss
@@ -6,6 +6,7 @@
 // Inbot colors
 $inbot-black: #030030;
 $inbot-red: #e30030;
+$inbot-font-color: rgba(3, 0, 48, 0.8);
 
 // TODO - consider using more descriptive names, or replacing with more specific variables.
 // Colors
