--- a/amundsen_application/static/css/_list-group.scss
+++ b/amundsen_application/static/css/_list-group.scss
@@ -7,25 +7,47 @@
   margin: 24px 0;
 
   .list-group-item {
-    background: white;
-    display: flex;
-    flex-direction: column;
-    margin-top: 16px;
-    margin-left: 20px;
-    color: #030030;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 4px 0px rgba(189, 110, 202, 0.2);
-    transition: margin 0.5s, box-shadow 0.5s;
-    border:none;
+    border-left: none;
+    border-right: none;
+    padding: 0;
 
     &.clickable:hover {
+      box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.12), 0 2px 3px 0 rgba(0, 0, 0, 0.16);
       cursor: pointer;
       z-index: 1;
-      text-decoration: none;
-      margin-top: 12px;
-      margin-bottom: 4px;
-      box-shadow: 0px 8px 8px 0px rgba(189, 110, 202, 0.6);
+    }
+  }
+
+  .list-group-box {
+    display: flex;
+    margin-left: 20px;
+    height: 100%;
+    margin-top: 16px;
+  
+    .list-group-box-item {
+      background: white;
+      display: flex;
+      flex-direction: column;
+      color: #030030;
+      border-radius: 10px;
+      box-shadow: 0px 4px 4px 0px rgba(189, 110, 202, 0.2);
+      transition: margin 0.5s, box-shadow 0.5s;
+      border:none;
+      width:98%;
+
+      &:hover {
+        cursor: pointer;
+        z-index: 1;
+        text-decoration: none;
+        margin-top: -2px;
+        margin-bottom: 2px;
+        box-shadow: 0px 6px 6px 0px rgba(189, 110, 202, 0.6);
+      }
+
+      a {
+        color:$inbot-font-color;
+        padding: 16px;
+      }
     }
   }
 }
