--- a/amundsen_application/static/js/components/common/ResourceListItem/styles.scss
+++ b/amundsen_application/static/js/components/common/ResourceListItem/styles.scss
@@ -38,6 +38,7 @@
     .resource-info-text {
       max-width: calc(100% - 32px);
       margin-left: $spacer-5;
+      color: rgba(3, 0, 48, 0.8);
     }
 
     .resource-name {
