fixed burger menu background with div layer

--- a/amundsen_application/static/css/_buttons-default.scss
+++ b/amundsen_application/static/css/_buttons-default.scss
@@ -8,8 +8,8 @@
   &.btn-default {
     border-width: 2px;
     font-weight: $font-weight-body-bold;
-    height: 32px;
-    padding: 6px 16px;
+    height: 46px;
+    padding: 0px;
 
     img.icon {
       border: none;
