fixed pagination and resource list item styles

--- a/amundsen_application/static/css/_list-group.scss
+++ b/amundsen_application/static/css/_list-group.scss
@@ -46,7 +46,11 @@
 
       a {
         color:$inbot-font-color;
-        padding: 16px;
+        padding: 22px;
+
+        &:hover {
+          text-decoration: none;
+        }
       }
     }
   }
