--- a/amundsen_application/static/js/components/common/ResourceListItem/styles.scss
+++ b/amundsen_application/static/js/components/common/ResourceListItem/styles.scss
@@ -3,93 +3,12 @@
 
 @import 'variables';
 
-.list-group-item .resource-list-item {
-  color: $text-primary;
-  display: flex;
-  flex-direction: row;
-  height: 60px;
-  text-decoration: none;
+.list-group-box-item .resource-list-item {
 
-  img.icon.resource-icon,
-  .sb-avatar {
-    margin: auto 16px auto 0;
-  }
-
-  .icon-right {
-    margin: auto 0 auto auto;
-    opacity: 0;
-  }
-
-  &:hover .icon-right,
-  &:focus .icon-right {
-    opacity: 1;
-  }
-
-  .bookmark-icon {
-    margin: -6px 0 -4px 4px;
-  }
-
-  .resource-info {
-    display: flex;
-    flex: 7;
-    margin-right: 24px;
-    min-width: 0;
-
-    .resource-info-text {
-      max-width: calc(100% - 32px);
-      margin-left: $spacer-5;
-      color: rgba(3, 0, 48, 0.8);
+  .resource-name {
+    span:hover {
+      text-decoration: underline;
+      color: $indigo80;
     }
-
-    .resource-name {
-      display: flex;
-
-      .dashboard-group {
-        color: $text-secondary;
-        white-space: nowrap;
-      }
-
-      .dashboard-name {
-        margin-right: $spacer-2;
-      }
-    }
-
-    ul {
-      display: flex;
-      list-style-type: unset;
-      padding: 0;
-    }
-
-    li {
-      margin-left: 12px;
-      margin-right: 12px;
-
-      &:first-child {
-        list-style-type: none;
-        margin-left: 0;
-      }
-    }
-  }
-
-  .resource-type {
-    flex: 2;
-    margin: auto 24px;
-  }
-
-  .resource-badges {
-    display: flex;
-    flex: 3;
-    flex-wrap: wrap;
-    margin-bottom: auto;
-    margin-left: 24px;
-    margin-top: auto;
-
-    .flag {
-      margin: 4px;
-    }
-  }
-
-  .title-2 {
-    color: $resource-title-color;
   }
 }
